# FFautologon

./: CMakeLists.txt  FFautologon.cpp  FFautologon_res.rc  README.md  README.txt  resource.h
lang/: en_US.rc  ja_JP.rc
